# project

./: coax_control.launch
actuation_ros/: actuation_ros.ino
coax_control/: CMakeLists.txt  package.xml
coax_control/include/coax_control/: coax_control.cpp  coax_control.h  coax_taxing.cpp  coax_taxing.h
coax_control/launch/: coax_control.launch  coax_taxing.launch
coax_control/src/: Taxing_main.cpp  main.cpp
coax_simulation/: CMakeLists.txt  package.xml
coax_simulation/include/coax_simulation/: Coax_sim.cpp  Coax_sim.h
coax_simulation/launch/: coax_simulator.launch
coax_simulation/src/: simulation_main.cpp
msgs/actuator_msgs/: CMakeLists.txt  package.xml
msgs/actuator_msgs/msg/: actuator.msg
msgs/lm4075e_msgs/lm4075e_msgs/: CMakeLists.txt  package.xml
tip_generation/: CMakeLists.txt  package.xml
tip_generation/include/tip_generation/: triple_integral_path.cpp  triple_integral_path.h
tip_generation/msg/: traj.msg
tip_generation/src/: tip_main.cpp
tvc_control/: CMakeLists.txt  package.xml
tvc_control/include/tvc_control/: tvc_control.cpp  tvc_control.h
tvc_control/launch/: tvc_test.launch
tvc_control/src/: main.cpp
